overflow fixed

--- a/src/styles/base/_resets.scss
+++ b/src/styles/base/_resets.scss
@@ -31,6 +31,5 @@ body {
   font-family: "Montserrat", sans-serif;
   line-height: 1.7;
   box-sizing: border-box;
-  height: 100%;
-  width: 100%;
+  overflow-x: hidden;
 }
